# PiKappLobbyCal

./: .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  python-app.yml
routes/: calendar_routes.py  config_routes.py  photo_routes.py
services/: calendar_service.py
static/css/: styles.css
static/js/: eventScroller.js  main.js  photoManager.js
templates/: index.html
tests/: test_calendar_service.py
utils/: logger.py
